@@ -1,5 +1,6 @@
 Version 6.6.2
-- Added warnings for constant array indices out of bounds
+- Added warning (-Warray-index) for constant array indices out of bounds
+- Allow warnings and optimizations to be turned off with a `no-` prefix (so `warn(no-init-vars)` is like `warn(!init-vars)`).
 
 Version 6.6.1
 - Changed type of `dat` array in C++ output to `unsigned char`
